lang/c/include/vtfppc/VTF.h

typedef const void* vtfpp_resource_handle_t;
VTFPP_API vtfpp_resource_type_e vtfpp_resource_get_type(vtfpp_resource_handle_t handle);
VTFPP_API vtfpp_resource_flags_e vtfpp_resource_get_flags(vtfpp_resource_handle_t handle);
VTFPP_API unsigned char* vtfpp_resource_get_data(vtfpp_resource_handle_t handle, size_t* dataLen);
VTFPP_API sourcepp_buffer_t vtfpp_resource_get_data_as_palette(vtfpp_resource_handle_t handle, uint16_t frame); // REQUIRES MANUAL FREE: sourcepp_buffer_free
VTFPP_API vtfpp_sht_handle_t vtfpp_resource_get_data_as_particle_sheet(vtfpp_resource_handle_t handle); // REQUIRES MANUAL FREE: vtfpp_sht_free
VTFPP_API uint32_t vtfpp_resource_get_data_as_crc(vtfpp_resource_handle_t handle);
VTFPP_API uint32_t vtfpp_resource_get_data_as_extended_flags(vtfpp_resource_handle_t handle);
VTFPP_API void vtfpp_resource_get_data_as_lod_control_info(vtfpp_resource_handle_t handle, uint8_t* u, uint8_t* v, uint8_t* u360, uint8_t* v360);
VTFPP_API sourcepp_string_t vtfpp_resource_get_data_as_keyvalues_data(vtfpp_resource_handle_t handle); // REQUIRES MANUAL FREE: sourcepp_string_free
VTFPP_API vtfpp_hot_handle_t vtfpp_resource_get_data_as_hotspot_data(vtfpp_resource_handle_t handle); // REQUIRES MANUAL FREE: vtfpp_hot_free
VTFPP_API int16_t vtfpp_resource_get_data_as_aux_compression_level(vtfpp_resource_handle_t handle);
VTFPP_API vtfpp_compression_method_e vtfpp_resource_get_data_as_aux_compression_method(vtfpp_resource_handle_t handle);
VTFPP_API uint32_t vtfpp_resource_get_data_as_aux_compression_length(vtfpp_resource_handle_t handle, uint8_t mip, uint8_t mipCount, uint16_t frame, uint16_t frameCount, uint16_t face, uint16_t faceCount);
typedef void* vtfpp_vtf_handle_t;
VTFPP_API vtfpp_vtf_handle_t vtfpp_vtf_create_empty(); // REQUIRES MANUAL FREE: vtfpp_vtf_close
VTFPP_API vtfpp_vtf_handle_t vtfpp_vtf_open_from_mem(const unsigned char* vtfData, size_t vtfLen, int parseHeaderOnly, int hdr); // REQUIRES MANUAL FREE: vtfpp_vtf_close
VTFPP_API vtfpp_vtf_handle_t vtfpp_vtf_open_from_file(const char* vtfPath, int parseHeaderOnly); // REQUIRES MANUAL FREE: vtfpp_vtf_close
VTFPP_API void vtfpp_vtf_close(vtfpp_vtf_handle_t* handle);
VTFPP_API int vtfpp_vtf_is_valid(vtfpp_vtf_handle_t handle);
VTFPP_API int vtfpp_vtf_create_from_mem_and_bake(const unsigned char* imageData, size_t imageLen, vtfpp_image_format_e format, uint16_t width, uint16_t height, const char* vtfPath, vtfpp_vtf_creation_options_t options);
VTFPP_API int vtfpp_vtf_create_blank_and_bake(vtfpp_image_format_e format, uint16_t width, uint16_t height, const char* vtfPath, vtfpp_vtf_creation_options_t options);
VTFPP_API vtfpp_vtf_handle_t vtfpp_vtf_create_from_mem(const unsigned char* imageData, size_t imageLen, vtfpp_image_format_e format, uint16_t width, uint16_t height, vtfpp_vtf_creation_options_t options); // REQUIRES MANUAL FREE: vtfpp_vtf_close
VTFPP_API vtfpp_vtf_handle_t vtfpp_vtf_create_blank(vtfpp_image_format_e format, uint16_t width, uint16_t height, vtfpp_vtf_creation_options_t options); // REQUIRES MANUAL FREE: vtfpp_vtf_close
VTFPP_API int vtfpp_vtf_create_from_file_and_bake(const char* imagePath, const char* vtfPath, vtfpp_vtf_creation_options_t options);
VTFPP_API vtfpp_vtf_handle_t vtfpp_vtf_create_from_file(const char* imagePath, vtfpp_vtf_creation_options_t options); // REQUIRES MANUAL FREE: vtfpp_vtf_close
VTFPP_API vtfpp_vtf_platform_e vtfpp_vtf_get_platform(vtfpp_vtf_handle_t handle);
VTFPP_API void vtfpp_vtf_set_platform(vtfpp_vtf_handle_t handle, vtfpp_vtf_platform_e platform);
VTFPP_API uint32_t vtfpp_vtf_get_version(vtfpp_vtf_handle_t handle);
VTFPP_API void vtfpp_vtf_set_version(vtfpp_vtf_handle_t handle, uint32_t version);