lang/c/include/vtfppc/SHT.h

typedef void* vtfpp_sht_handle_t;
VTFPP_API vtfpp_sht_handle_t vtfpp_sht_create(); // REQUIRES MANUAL FREE: vtfpp_sht_close
VTFPP_API vtfpp_sht_handle_t vtfpp_sht_open_from_mem(const unsigned char* shtData, size_t shtLen); // REQUIRES MANUAL FREE: vtfpp_sht_close
VTFPP_API vtfpp_sht_handle_t vtfpp_sht_open_from_file(const char* shtPath); // REQUIRES MANUAL FREE: vtfpp_sht_close
VTFPP_API void vtfpp_sht_close(vtfpp_sht_handle_t* handle);
VTFPP_API int vtfpp_sht_is_valid(vtfpp_sht_handle_t handle);
VTFPP_API uint32_t vtfpp_sht_get_version(vtfpp_sht_handle_t handle);
VTFPP_API void vtfpp_sht_set_version(vtfpp_sht_handle_t handle, uint32_t version);
VTFPP_API uint32_t vtfpp_sht_get_sequences_count(vtfpp_sht_handle_t handle);
VTFPP_API vtfpp_sht_sequence_t vtfpp_sht_get_sequence_at_index(vtfpp_sht_handle_t handle, uint32_t index);
VTFPP_API vtfpp_sht_sequence_t vtfpp_sht_get_sequence_with_id(vtfpp_sht_handle_t handle, uint32_t id);
VTFPP_API void vtfpp_sht_set_sequence_at_index(vtfpp_sht_handle_t handle, uint32_t index, vtfpp_sht_sequence_t sequence);
VTFPP_API void vtfpp_sht_set_sequence_with_id(vtfpp_sht_handle_t handle, uint32_t id, vtfpp_sht_sequence_t sequence);
VTFPP_API void vtfpp_sht_add_sequence(vtfpp_sht_handle_t handle, vtfpp_sht_sequence_t sequence);
VTFPP_API void vtfpp_sht_remove_sequence_at_index(vtfpp_sht_handle_t handle, uint32_t index);
VTFPP_API void vtfpp_sht_remove_sequence_with_id(vtfpp_sht_handle_t handle, uint32_t id);
VTFPP_API vtfpp_sht_sequence_frame_t vtfpp_sht_get_frame(vtfpp_sht_handle_t handle, uint32_t sequenceID, uint32_t index);
VTFPP_API void vtfpp_sht_set_frame(vtfpp_sht_handle_t handle, uint32_t sequenceID, uint32_t index, vtfpp_sht_sequence_frame_t frame);
VTFPP_API void vtfpp_sht_add_frame(vtfpp_sht_handle_t handle, uint32_t sequenceID, vtfpp_sht_sequence_frame_t frame);
VTFPP_API void vtfpp_sht_remove_frame(vtfpp_sht_handle_t handle, uint32_t sequenceID, uint32_t index);
VTFPP_API uint8_t vtfpp_sht_get_frame_bounds_count(vtfpp_sht_handle_t handle);
VTFPP_API sourcepp_buffer_t vtfpp_sht_bake(vtfpp_sht_handle_t handle); // REQUIRES MANUAL FREE: sourcepp_buffer_free
VTFPP_API int vtfpp_sht_bake_to_file(vtfpp_sht_handle_t handle, const char* shtPath);