lang/csharp/src/vtfpp/DLL.cs


	[LibraryImport(Name, StringMarshalling = StringMarshalling.Utf8)]
	public static partial int vtfpp_ppl_set_image_from_file_with_options(nint handle, string imagePath, uint resizedWidth, uint resizedHeight, uint lod, ImageConversion.ResizeFilter filter, float quality);

	[LibraryImport(Name)]
	public static partial int vtfpp_ppl_set_image_from_mem(nint handle, ReadOnlySpan<byte> buffer, ulong bufferLen, ImageFormat format, uint width, uint height, uint lod, float quality);

	[LibraryImport(Name)]
	public static partial int vtfpp_ppl_set_image_from_mem_with_options(nint handle, ReadOnlySpan<byte> buffer, ulong bufferLen, ImageFormat format, uint width, uint height, uint resizedWidth, uint resizedHeight, uint lod, ImageConversion.ResizeFilter filter, float quality);

	[LibraryImport(Name)]
	public static partial int vtfpp_ppl_remove_image(nint handle, uint lod);

	[LibraryImport(Name, StringMarshalling = StringMarshalling.Utf8)]
	public static partial int vtfpp_ppl_save_image_to_file(nint handle, string imagePath, uint lod, ImageConversion.FileFormat fileFormat);

	[LibraryImport(Name)]
	public static partial sourcepp.DLL.Buffer vtfpp_ppl_bake(nint handle);

	[LibraryImport(Name, StringMarshalling = StringMarshalling.Utf8)]
	public static partial int vtfpp_ppl_bake_to_file(nint handle, string pplPath);

	[LibraryImport(Name)]
	public static partial nint vtfpp_psframes_open_from_mem(ReadOnlySpan<byte> buffer, ulong bufferLen);

	[LibraryImport(Name, StringMarshalling = StringMarshalling.Utf8)]
	public static partial nint vtfpp_psframes_open_from_file(string psframesPath);

	[LibraryImport(Name)]
	public static partial void vtfpp_psframes_close(ref nint handle);

	[LibraryImport(Name)]
	public static partial uint vtfpp_psframes_get_frame_count(nint handle);

	[LibraryImport(Name)]
	public static partial uint vtfpp_psframes_get_fps(nint handle);

	[LibraryImport(Name)]
	public static partial ushort vtfpp_psframes_get_width(nint handle);

	[LibraryImport(Name)]
	public static partial ushort vtfpp_psframes_get_height(nint handle);

	[LibraryImport(Name)]
	public static partial sourcepp.DLL.Buffer vtfpp_psframes_get_image_data_as(nint handle, ImageFormat newFormat, uint frame);

	[LibraryImport(Name)]
	public static partial sourcepp.DLL.Buffer vtfpp_psframes_get_image_data_as_bgr888(nint handle, uint frame);

	[LibraryImport(Name)]
	public static partial nint vtfpp_sht_create();

	[LibraryImport(Name)]
	public static partial nint vtfpp_sht_open_from_mem(ReadOnlySpan<byte> shtData, ulong shtLen);

	[LibraryImport(Name, StringMarshalling = StringMarshalling.Utf8)]
	public static partial nint vtfpp_sht_open_from_file(string shtPath);

	[LibraryImport(Name)]
	public static partial void vtfpp_sht_close(ref nint handle);

	[LibraryImport(Name)]
	public static partial int vtfpp_sht_is_valid(nint handle);

	[LibraryImport(Name)]
	public static partial uint vtfpp_sht_get_version(nint handle);

	[LibraryImport(Name)]
	public static partial void vtfpp_sht_set_version(nint handle, uint version);

	[LibraryImport(Name)]
	public static partial uint vtfpp_sht_get_sequences_count(nint handle);

	[LibraryImport(Name)]
	public static partial SHT.Sequence vtfpp_sht_get_sequence_at_index(nint handle, uint index);

	[LibraryImport(Name)]
	public static partial SHT.Sequence vtfpp_sht_get_sequence_with_id(nint handle, uint id);

	[LibraryImport(Name)]
	public static partial void vtfpp_sht_set_sequence_at_index(nint handle, uint index, SHT.Sequence sequence);

	[LibraryImport(Name)]
	public static partial void vtfpp_sht_set_sequence_with_id(nint handle, uint id, SHT.Sequence sequence);

	[LibraryImport(Name)]
	public static partial void vtfpp_sht_add_sequence(nint handle, SHT.Sequence sequence);

	[LibraryImport(Name)]
	public static partial void vtfpp_sht_remove_sequence_at_index(nint handle, uint index);

	[LibraryImport(Name)]
	public static partial void vtfpp_sht_remove_sequence_with_id(nint handle, uint id);

	[LibraryImport(Name)]
	public static partial SHT.Sequence.Frame vtfpp_sht_get_frame(nint handle, uint sequenceId, uint index);

	[LibraryImport(Name)]
	public static partial void vtfpp_sht_set_frame(nint handle, uint sequenceId, uint index, SHT.Sequence.Frame frame);

	[LibraryImport(Name)]
	public static partial void vtfpp_sht_add_frame(nint handle, uint sequenceId, SHT.Sequence.Frame frame);

	[LibraryImport(Name)]
	public static partial void vtfpp_sht_remove_frame(nint handle, uint sequenceId, uint index);

	[LibraryImport(Name)]
	public static partial byte vtfpp_sht_get_frame_bounds_count(nint handle);

	[LibraryImport(Name)]
	public static partial sourcepp.DLL.Buffer vtfpp_sht_bake(nint handle);

	[LibraryImport(Name, StringMarshalling = StringMarshalling.Utf8)]
	public static partial int vtfpp_sht_bake_to_file(nint handle, string shtPath);

	[LibraryImport(Name)]
	public static partial nint vtfpp_ttx_create(nint vtf);

	[LibraryImport(Name)]
	public static partial nint vtfpp_ttx_open_from_mem(ReadOnlySpan<byte> tthData, ulong tthLen, ReadOnlySpan<byte> ttzData, ulong ttzLen);

	[LibraryImport(Name, StringMarshalling = StringMarshalling.Utf8)]
	public static partial nint vtfpp_ttx_open_from_file(string tthPath, string ttzPath);

	[LibraryImport(Name)]
	public static partial void vtfpp_ttx_close(ref nint handle);

	[LibraryImport(Name)]
	public static partial int vtfpp_ttx_is_valid(nint handle);

	[LibraryImport(Name)]
	public static partial byte vtfpp_ttx_get_major_version(nint handle);

	[LibraryImport(Name)]
	public static partial byte vtfpp_ttx_get_minor_version(nint handle);

	[LibraryImport(Name)]
	public static partial void vtfpp_ttx_set_version(nint handle, byte majorVersion, byte minorVersion);

	[LibraryImport(Name)]
	public static partial void vtfpp_ttx_set_major_version(nint handle, byte majorVersion);

	[LibraryImport(Name)]
	public static partial void vtfpp_ttx_set_minor_version(nint handle, byte minorVersion);

	[LibraryImport(Name)]
	public static partial byte vtfpp_ttx_get_aspect_ratio_type(nint handle);

	[LibraryImport(Name)]
	public static partial void vtfpp_ttx_set_aspect_ratio_type(nint handle, byte aspectRatioType);

	[LibraryImport(Name)]
	public static partial sourcepp.DLL.Buffer vtfpp_ttx_get_mip_flags(nint handle);

	[LibraryImport(Name)]
	public static partial void vtfpp_ttx_set_mip_flags(nint handle, ReadOnlySpan<ulong> mipFlags, ulong mipFlagsLen);

	[LibraryImport(Name)]
	public static partial nint vtfpp_ttx_get_vtf(nint handle);

	[LibraryImport(Name)]
	public static partial void vtfpp_ttx_set_vtf(nint handle, nint vtf);

	[LibraryImport(Name)]
	public static partial short vtfpp_ttx_get_compression_level(nint handle);

	[LibraryImport(Name)]
	public static partial void vtfpp_ttx_set_compression_level(nint handle, short compressionLevel);

	[LibraryImport(Name)]
	public static partial sourcepp.DLL.Buffer vtfpp_ttx_bake(nint handle, ref ulong tthLen, ref ulong ttzLen);

	[LibraryImport(Name, StringMarshalling = StringMarshalling.Utf8)]
	public static partial int vtfpp_ttx_bake_to_file(nint handle, string tthPath, string ttzPath);

	[LibraryImport(Name)]
	public static partial nint vtfpp_vbf_open_from_mem(ReadOnlySpan<byte> buffer, ulong bufferLen);

	[LibraryImport(Name, StringMarshalling = StringMarshalling.Utf8)]
	public static partial nint vtfpp_vbf_open_from_file(string vbfPath);

	[LibraryImport(Name)]
	public static partial void vtfpp_vbf_close(ref nint handle);

	[LibraryImport(Name)]
	public static partial int vtfpp_vbf_is_valid(nint handle);

	[LibraryImport(Name)]
	public static partial ushort vtfpp_vbf_get_page_width(nint handle);

	[LibraryImport(Name)]
	public static partial ushort vtfpp_vbf_get_page_height(nint handle);

	[LibraryImport(Name)]
	public static partial ushort vtfpp_vbf_get_max_glyph_width(nint handle);

	[LibraryImport(Name)]
	public static partial ushort vtfpp_vbf_get_max_glyph_height(nint handle);

	[LibraryImport(Name)]
	public static partial VBF.Flags vtfpp_vbf_get_flags(nint handle);

	[LibraryImport(Name)]
	public static partial ushort vtfpp_vbf_get_ascent(nint handle);

	[LibraryImport(Name)]
	public static partial VBF.Glyph vtfpp_vbf_get_glyph(nint handle, byte index);

	[LibraryImport(Name)]
	public static partial Resource.Type vtfpp_resource_get_type(nint handle);

	[LibraryImport(Name)]
	public static partial Resource.Flags vtfpp_resource_get_flags(nint handle);

	[LibraryImport(Name)]
	public static unsafe partial byte* vtfpp_resource_get_data(nint handle, ref ulong dataLen);

	[LibraryImport(Name)]
	public static partial sourcepp.DLL.Buffer vtfpp_resource_get_data_as_palette(nint handle, ushort frame);

	[LibraryImport(Name)]
	public static partial nint vtfpp_resource_get_data_as_particle_sheet(nint handle);

	[LibraryImport(Name)]
	public static partial uint vtfpp_resource_get_data_as_crc(nint handle);

	[LibraryImport(Name)]
	public static partial uint vtfpp_resource_get_data_as_extended_flags(nint handle);

	[LibraryImport(Name)]
	public static partial void vtfpp_resource_get_data_as_lod_control_info(nint handle, ref byte u, ref byte v, ref byte u360, ref byte v360);

	[LibraryImport(Name)]
	public static partial sourcepp.DLL.String vtfpp_resource_get_data_as_keyvalues_data(nint handle);

	[LibraryImport(Name)]
	public static partial nint vtfpp_resource_get_data_as_hotspot_data(nint handle);

	[LibraryImport(Name)]
	public static partial short vtfpp_resource_get_data_as_aux_compression_level(nint handle);

	[LibraryImport(Name)]
	public static partial CompressionMethod vtfpp_resource_get_data_as_aux_compression_method(nint handle);

	[LibraryImport(Name)]
	public static partial uint vtfpp_resource_get_data_as_aux_compression_length(nint handle, byte mip, byte mipCount, ushort frame, ushort frameCount, ushort face, ushort faceCount);

	[LibraryImport(Name)]
	public static partial nint vtfpp_vtf_create_empty();

	[LibraryImport(Name)]
	public static partial nint vtfpp_vtf_open_from_mem(ReadOnlySpan<byte> vtfData, ulong vtfLen, int parseHeaderOnly, int hdr);

	[LibraryImport(Name, StringMarshalling = StringMarshalling.Utf8)]
	public static partial nint vtfpp_vtf_open_from_file(string vtfPath, int parseHeaderOnly);

	[LibraryImport(Name)]
	public static partial void vtfpp_vtf_close(ref nint handle);

	[LibraryImport(Name)]
	public static partial int vtfpp_vtf_is_valid(nint handle);

	[LibraryImport(Name, StringMarshalling = StringMarshalling.Utf8)]
	public static partial int vtfpp_vtf_create_from_mem_and_bake(ReadOnlySpan<byte> imageData, ulong imageLen, ImageFormat format, ushort width, ushort height, string vtfPath, VTF.CreationOptions options);

	[LibraryImport(Name, StringMarshalling = StringMarshalling.Utf8)]
	public static partial int vtfpp_vtf_create_blank_and_bake(ImageFormat format, ushort width, ushort height, string vtfPath, VTF.CreationOptions options);

	[LibraryImport(Name)]
	public static partial nint vtfpp_vtf_create_from_mem(ReadOnlySpan<byte> imageData, ulong imageLen, ImageFormat format, ushort width, ushort height, VTF.CreationOptions options);

	[LibraryImport(Name)]
	public static partial nint vtfpp_vtf_create_blank(ImageFormat format, ushort width, ushort height, VTF.CreationOptions options);

	[LibraryImport(Name, StringMarshalling = StringMarshalling.Utf8)]
	public static partial int vtfpp_vtf_create_from_file_and_bake(string imagePath, string vtfPath, VTF.CreationOptions options);

	[LibraryImport(Name, StringMarshalling = StringMarshalling.Utf8)]
	public static partial nint vtfpp_vtf_create_from_file(string imagePath, VTF.CreationOptions options);

	[LibraryImport(Name)]
	public static partial VTF.Platform vtfpp_vtf_get_platform(nint handle);

	[LibraryImport(Name)]
	public static partial void vtfpp_vtf_set_platform(nint handle, VTF.Platform platform);

	[LibraryImport(Name)]
	public static partial uint vtfpp_vtf_get_version(nint handle);

	[LibraryImport(Name)]
	public static partial void vtfpp_vtf_set_version(nint handle, uint version);
